--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,15 +76,19 @@ jobs:
 
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             # For PRs: use PR number
-            echo "TAG=${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-pr-${{ github.event.number }}" >> "$GITHUB_OUTPUT"
+            TAG="${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-pr-${{ github.event.number }}"
+            echo "TAG=${TAG}" >> "$GITHUB_OUTPUT"
           elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             # For main: stable tags + short SHA
             SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
-            echo "TAG=${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE},${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-sha-${SHORT_SHA}" >> "$GITHUB_OUTPUT"
+            TAG="${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}"
+            TAG="${TAG},${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-sha-${SHORT_SHA}"
+            echo "TAG=${TAG}" >> "$GITHUB_OUTPUT"
           else
             # Other branches: use branch name
             BRANCH_NAME="${GITHUB_REF#refs/heads/}"
-            echo "TAG=${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-${BRANCH_NAME}" >> "$GITHUB_OUTPUT"
+            TAG="${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-${BRANCH_NAME}"
+            echo "TAG=${TAG}" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Build Only.
@@ -116,5 +120,6 @@ jobs:
           fi
 
       - name: Clear old GitHub Actions caches.
-        if: ${{ github.event_name == 'push' && matrix.build_type == 'full' }}
+        if: >-
+          ${{ github.event_name == 'push' && matrix.build_type == 'full' }}
         uses: easimon/wipe-cache@main
