--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,9 @@ on:
         type: string
 
 concurrency:
-  group: release-${{ github.ref_type == 'tag' && github.ref_name || github.event.inputs.version }}
+  group: >-
+    release-${{ github.ref_type == 'tag' && github.ref_name ||
+    github.event.inputs.version }}
   cancel-in-progress: true
 
 name: release
@@ -35,34 +37,34 @@ jobs:
       version: ${{ steps.version.outputs.version }}
       should_build: ${{ steps.version.outputs.should_build }}
     steps:
-    - name: Extract version.
-      id: version
-      env:
-        INPUT_VERSION: ${{ github.event.inputs.version }}
-      run: |
-        set -Eeuo pipefail
-        VERSION=""
-        SHOULD_BUILD="false"
+      - name: Extract version.
+        id: version
+        env:
+          INPUT_VERSION: ${{ github.event.inputs.version }}
+        run: |
+          set -Eeuo pipefail
+          VERSION=""
+          SHOULD_BUILD="false"
 
-        # From tag
-        if [[ "${GITHUB_REF_NAME:-}" == v* ]]; then
-          VERSION="${GITHUB_REF_NAME#v}"
-          SHOULD_BUILD="true"
-        # From workflow dispatch
-        elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-          VERSION="$INPUT_VERSION"
-          SHOULD_BUILD="true"
-        fi
+          # From tag
+          if [[ "${GITHUB_REF_NAME:-}" == v* ]]; then
+            VERSION="${GITHUB_REF_NAME#v}"
+            SHOULD_BUILD="true"
+          # From workflow dispatch
+          elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            VERSION="$INPUT_VERSION"
+            SHOULD_BUILD="true"
+          fi
 
-        # Validate semantic version
-        if [[ "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-          printf 'version=%s\n' "$VERSION" >> "$GITHUB_OUTPUT"
-          printf 'should_build=%s\n' "$SHOULD_BUILD" >> "$GITHUB_OUTPUT"
-          echo "✅ Valid version: $VERSION"
-        else
-          echo "should_build=false" >> "$GITHUB_OUTPUT"
-          echo "⚠️ No valid version found"
-        fi
+          # Validate semantic version
+          if [[ "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            printf 'version=%s\n' "$VERSION" >> "$GITHUB_OUTPUT"
+            printf 'should_build=%s\n' "$SHOULD_BUILD" >> "$GITHUB_OUTPUT"
+            echo "✅ Valid version: $VERSION"
+          else
+            echo "should_build=false" >> "$GITHUB_OUTPUT"
+            echo "⚠️ No valid version found"
+          fi
 
   build:
     needs: validate-version
@@ -79,69 +81,72 @@ jobs:
         build_type: [dev, full, prod]
 
     steps:
-    - name: Checkout.
-      uses: actions/checkout@v5
+      - name: Checkout.
+        uses: actions/checkout@v5
 
-    - name: Setup Docker Buildx.
-      uses: docker/setup-buildx-action@v3
+      - name: Setup Docker Buildx.
+        uses: docker/setup-buildx-action@v3
 
-    - name: Login to GitHub Container Registry.
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to GitHub Container Registry.
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Compute build metadata.
-      id: meta
-      run: |
-        echo "created=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> "$GITHUB_OUTPUT"
+      - name: Compute build metadata.
+        id: meta
+        run: |
+          echo "created=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> "$GITHUB_OUTPUT"
 
-    - name: Prepare tags.
-      id: tags
-      run: |
-        set -Eeuo pipefail
-        BASE_NAME="${{ env.REGISTRY }}/${{ github.repository_owner }}/apache"
-        VERSION="${{ needs.validate-version.outputs.version }}"
-        BUILD_TYPE="${{ matrix.build_type }}"
-        PHP_VERSION="${{ env.PHP_VERSION }}"
+      - name: Prepare tags.
+        id: tags
+        run: |
+          set -Eeuo pipefail
+          BASE_NAME="${{ env.REGISTRY }}/${{ github.repository_owner }}/apache"
+          VERSION="${{ needs.validate-version.outputs.version }}"
+          BUILD_TYPE="${{ matrix.build_type }}"
+          PHP_VERSION="${{ env.PHP_VERSION }}"
 
-        # Main tags with version
-        TAGS="${BASE_NAME}:${VERSION}-${BUILD_TYPE}"
-        TAGS="${TAGS},${BASE_NAME}:${PHP_VERSION}-${VERSION}-${BUILD_TYPE}"
+          # Main tags with version
+          TAGS="${BASE_NAME}:${VERSION}-${BUILD_TYPE}"
+          TAGS="${TAGS},${BASE_NAME}:${PHP_VERSION}-${VERSION}-${BUILD_TYPE}"
 
-        # Latest tag for prod on version tags or validated manual releases
-        if [[ "$BUILD_TYPE" == "prod" && ( "${{ github.ref }}" =~ ^refs/tags/v || "${{ github.event_name }}" == "workflow_dispatch" ) ]]; then
-          TAGS="${TAGS},${BASE_NAME}:latest"
-          TAGS="${TAGS},${BASE_NAME}:${PHP_VERSION}-latest"
-        fi
+          # Latest tag for prod on version tags or validated manual releases
+          if [[ "$BUILD_TYPE" == "prod" && \
+                ( "${{ github.ref }}" =~ ^refs/tags/v || \
+                  "${{ github.event_name }}" == "workflow_dispatch" ) ]]; then
+            TAGS="${TAGS},${BASE_NAME}:latest"
+            TAGS="${TAGS},${BASE_NAME}:${PHP_VERSION}-latest"
+          fi
 
-        # Build type latest
-        if [[ "${{ github.ref }}" =~ ^refs/tags/v || "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-          TAGS="${TAGS},${BASE_NAME}:${BUILD_TYPE}-latest"
-        fi
+          # Build type latest
+          if [[ "${{ github.ref }}" =~ ^refs/tags/v || \
+                "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            TAGS="${TAGS},${BASE_NAME}:${BUILD_TYPE}-latest"
+          fi
 
-        printf 'tags=%s\n' "$TAGS" >> "$GITHUB_OUTPUT"
-        echo "📦 Tags: $TAGS"
+          printf 'tags=%s\n' "$TAGS" >> "$GITHUB_OUTPUT"
+          echo "📦 Tags: $TAGS"
 
-    - name: Build and Push.
-      uses: docker/build-push-action@v6
-      with:
-        build-args: |
-          BUILD_TYPE=${{ matrix.build_type }}
-          PHP_VERSION=${{ env.PHP_VERSION }}
-          VERSION=${{ needs.validate-version.outputs.version }}
-        cache-from: type=gha,scope=${{ matrix.build_type }}
-        cache-to: type=gha,mode=max,scope=${{ matrix.build_type }}
-        context: .
-        file: ./src/flavor/Dockerfile.apache
-        labels: |
-          org.opencontainers.image.created=${{ steps.meta.outputs.created }}
-          org.opencontainers.image.version=${{ needs.validate-version.outputs.version }}
-        provenance: true
-        push: true
-        sbom: true
-        tags: ${{ steps.tags.outputs.tags }}
+      - name: Build and Push.
+        uses: docker/build-push-action@v6
+        with:
+          build-args: |
+            BUILD_TYPE=${{ matrix.build_type }}
+            PHP_VERSION=${{ env.PHP_VERSION }}
+            VERSION=${{ needs.validate-version.outputs.version }}
+          cache-from: type=gha,scope=${{ matrix.build_type }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.build_type }}
+          context: .
+          file: ./src/flavor/Dockerfile.apache
+          labels: |
+            org.opencontainers.image.created=${{ steps.meta.outputs.created }}
+            org.opencontainers.image.version=${{ needs.validate-version.outputs.version }}
+          provenance: true
+          push: true
+          sbom: true
+          tags: ${{ steps.tags.outputs.tags }}
 
   cleanup-old-versions:
     name: Cleanup old versions
@@ -160,40 +165,40 @@ jobs:
         build_type: [dev, full, prod]
 
     steps:
-    - name: Wait for images to be available
-      run: sleep 30
+      - name: Wait for images to be available
+        run: sleep 30
 
-    - name: Cleanup ${{ matrix.build_type }} versions
-      uses: dataaxiom/ghcr-cleanup-action@v1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        owner: ${{ github.repository_owner }}
-        repository: ${{ github.repository }}
-        package: apache
-        delete-tags: '*-${{ matrix.build_type }}'
-        exclude-tags: |
-          latest
-          ${{ matrix.build_type }}-latest
-          8.4-latest
-          ${{ needs.validate-version.outputs.version }}-${{ matrix.build_type }}
-          8.4-${{ needs.validate-version.outputs.version }}-${{ matrix.build_type }}
-        keep-n-tagged: 2
-        delete-untagged: true
-        keep-n-untagged: 0
-        older-than: 1 hour
-        validate: true
-        dry-run: false
+      - name: Cleanup ${{ matrix.build_type }} versions
+        uses: dataaxiom/ghcr-cleanup-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          owner: ${{ github.repository_owner }}
+          repository: ${{ github.repository }}
+          package: apache
+          delete-tags: '*-${{ matrix.build_type }}'
+          exclude-tags: |
+            latest
+            ${{ matrix.build_type }}-latest
+            8.4-latest
+            ${{ needs.validate-version.outputs.version }}-${{ matrix.build_type }}
+            8.4-${{ needs.validate-version.outputs.version }}-${{ matrix.build_type }}
+          keep-n-tagged: 2
+          delete-untagged: true
+          keep-n-untagged: 0
+          older-than: 1 hour
+          validate: true
+          dry-run: false
 
-    - name: Report cleanup
-      if: always()
-      run: |
-        {
-          echo "### 🧹 Cleanup post-release"
-          echo "**Build type:** ${{ matrix.build_type }}"
-          echo "**Version nueva:** ${{ needs.validate-version.outputs.version }}"
-          echo "**Versiones mantenidas:** 2"
-          echo "**Estado:** ${{ job.status }}"
-        } >> "$GITHUB_STEP_SUMMARY"
+      - name: Report cleanup
+        if: always()
+        run: |
+          {
+            echo "### 🧹 Cleanup post-release"
+            echo "**Build type:** ${{ matrix.build_type }}"
+            echo "**Version nueva:** ${{ needs.validate-version.outputs.version }}"
+            echo "**Versiones mantenidas:** 2"
+            echo "**Estado:** ${{ job.status }}"
+          } >> "$GITHUB_STEP_SUMMARY"
 
   summary:
     name: Release Summary
@@ -202,33 +207,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Generate summary
-      run: |
-        {
-          echo "# 📦 Release Summary"
-          echo ""
-          echo "**Version:** ${{ needs.validate-version.outputs.version }}"
-          echo "**PHP Version:** ${{ env.PHP_VERSION }}"
-          echo "**Registry:** ${{ env.REGISTRY }}"
-          echo ""
-          echo "## 🗂️ Build Status"
-          echo "| Build Type | Status |"
-          echo "|------------|--------|"
-          echo "| dev | ${{ needs.build.result }} |"
-          echo "| full | ${{ needs.build.result }} |"
-          echo "| prod | ${{ needs.build.result }} |"
-          echo ""
-        } >> "$GITHUB_STEP_SUMMARY"
-
-        if [[ "${{ needs.cleanup-old-versions.result }}" != "skipped" ]]; then
+      - name: Generate summary
+        run: |
           {
-            echo "## 🧹 Cleanup"
-            echo "Status: ${{ needs.cleanup-old-versions.result }}"
+            echo "# 📦 Release Summary"
+            echo ""
+            echo "**Version:** ${{ needs.validate-version.outputs.version }}"
+            echo "**PHP Version:** ${{ env.PHP_VERSION }}"
+            echo "**Registry:** ${{ env.REGISTRY }}"
+            echo ""
+            echo "## 🗂️ Build Status"
+            echo "| Build Type | Status |"
+            echo "|------------|--------|"
+            echo "| dev | ${{ needs.build.result }} |"
+            echo "| full | ${{ needs.build.result }} |"
+            echo "| prod | ${{ needs.build.result }} |"
+            echo ""
           } >> "$GITHUB_STEP_SUMMARY"
-        fi
 
-        {
-          echo ""
-          echo "---"
-          echo "*Released at $(date -u +%Y-%m-%dT%H:%M:%SZ)*"
-        } >> "$GITHUB_STEP_SUMMARY"
+          if [[ "${{ needs.cleanup-old-versions.result }}" != "skipped" ]]; then
+            {
+              echo "## 🧹 Cleanup"
+              echo "Status: ${{ needs.cleanup-old-versions.result }}"
+            } >> "$GITHUB_STEP_SUMMARY"
+          fi
+
+          {
+            echo ""
+            echo "---"
+            echo "*Released at $(date -u +%Y-%m-%dT%H:%M:%SZ)*"
+          } >> "$GITHUB_STEP_SUMMARY"
