--- a/src/flavor/apache/Dockerfile
+++ b/src/flavor/apache/Dockerfile
@@ -250,13 +250,12 @@ LABEL apache.version="2.4" \
     org.opencontainers.image.authors="@terabytesoftw" \
     org.opencontainers.image.base.name="php:${PHP_VERSION}-fpm-trixie" \
     org.opencontainers.image.description="Debian Trixie + PHP ${PHP_VERSION} FPM + Apache with HTTP/2 support for Yii2 applications. Build type: ${BUILD_TYPE}" \
-    org.opencontainers.image.documentation="https://github.com/yii2-extensions/apache#readme" \
+    org.opencontainers.image.documentation="https://github.com/yii2-extensions/docker-images#readme" \
     org.opencontainers.image.licenses="BSD-3-Clause" \
-    org.opencontainers.image.source="https://github.com/yii2-extensions/apache" \
+    org.opencontainers.image.source="https://github.com/yii2-extensions/docker-images" \
     org.opencontainers.image.title="Yii2 Apache Docker Image" \
-    org.opencontainers.image.url="https://github.com/yii2-extensions/apache" \
-    org.opencontainers.image.vendor="yii2-extensions" \
-    org.opencontainers.image.version="${VERSION}"
+    org.opencontainers.image.url="https://github.com/yii2-extensions/docker-images" \
+    org.opencontainers.image.vendor="yii2-extensions"
 
 WORKDIR /var/www/app
 
