--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -7,7 +7,7 @@ name: linter
 
 jobs:
   linter:
-    uses: php-forge/actions/.github/workflows/super-linter.yml@main
+    uses: php-forge/actions/.github/workflows/super-linter.yml@v2
     permissions:
       checks: write
       contents: read
