--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ concurrency:
 name: release
 
 env:
-  PHP_VERSION: "8.4"
+  PHP_VERSION: "8.5"
   REGISTRY: ghcr.io
 
 jobs:
@@ -35,7 +35,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
       - name: Validate Version
         id: validate
@@ -62,7 +62,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -161,7 +161,7 @@ jobs:
 
               if [[ "${{ env.BUILD_RESULT }}" == "success" ]]; then
                 echo "## 🏷️ Generated Tags"
-                echo "- \`8.4-debian-{build_type}-v${{ env.VERSION }}\`"
+                echo "- \`${{ env.PHP_VERSION }}-debian-{build_type}-v${{ env.VERSION }}\`"
                 if [[ "${{ env.IS_PRERELEASE }}" == "false" ]]; then
                   echo "- \`latest\` (prod only)"
                 fi
