--- a/src/flavor/apache/Dockerfile
+++ b/src/flavor/apache/Dockerfile
@@ -1,10 +1,10 @@
 #==============================================================================
-# Yii2 Docker - Debian Trixie + PHP 8.4 FPM + Apache with HTTP/2
+# Yii2 Docker - Debian Trixie + PHP 8.5 FPM + Apache with HTTP/2
 # Supports: full (testing), dev (development), prod (production)
 #==============================================================================
 
 ARG BUILD_TYPE=dev
-ARG PHP_VERSION=8.4
+ARG PHP_VERSION=8.5
 
 #------------------------------------------------------------------------------
 # Base System
@@ -167,6 +167,8 @@ RUN install-php-extensions \
 #------------------------------------------------------------------------------
 FROM dev AS full
 
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
 # Layer 07: Full extensions
 RUN install-php-extensions \
     oci8 \
@@ -175,21 +177,41 @@ RUN install-php-extensions \
 
 # Layer 08: Microsoft SQL Server support
 # Note: Using Debian 12 (bookworm) repo since Trixie (13) is not yet officially supported by Microsoft
-RUN /bin/bash -o pipefail -c "set -ex \
+# hadolint ignore=DL3003,SC2153
+RUN set -ex \
     && apt-get update \
     && apt-get install -y --no-install-recommends \
         curl \
         gnupg \
         ca-certificates \
     && curl -fsSL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor -o /usr/share/keyrings/microsoft-prod.gpg \
-    && echo \"deb [arch=amd64,arm64 signed-by=/usr/share/keyrings/microsoft-prod.gpg] https://packages.microsoft.com/debian/12/prod bookworm main\" > /etc/apt/sources.list.d/mssql-release.list \
+    && echo 'deb [arch=amd64,arm64 signed-by=/usr/share/keyrings/microsoft-prod.gpg] https://packages.microsoft.com/debian/12/prod bookworm main' > /etc/apt/sources.list.d/mssql-release.list \
     && apt-get update \
     && ACCEPT_EULA=Y apt-get install -y --no-install-recommends msodbcsql18 \
-    && apt-get install -y --no-install-recommends unixodbc-dev \
-    && install-php-extensions sqlsrv pdo_sqlsrv \
-    && apt-get purge -y --auto-remove gnupg \
+    && read -r -a phpize_deps <<< "${PHPIZE_DEPS}" \
+    && apt-get install -y --no-install-recommends unixodbc unixodbc-dev "${phpize_deps[@]}" \
+    && printf '\\n' | pecl install sqlsrv-5.12.0 \
+    && PHP_VERSION_ID="$(php -r 'echo PHP_VERSION_ID;')" \
+    && if [[ "${PHP_VERSION_ID}" -ge 80500 ]]; then \
+        cd /tmp \
+        && pecl download pdo_sqlsrv-5.12.0 \
+        && tar -xf pdo_sqlsrv-5.12.0.tgz \
+        && rm -f pdo_sqlsrv-5.12.0.tgz \
+        && cd pdo_sqlsrv-5.12.0 \
+        && sed -i 's/= dbh->error_mode/= (enum pdo_error_mode) dbh->error_mode/' pdo_dbh.cpp \
+        && sed -i 's/zval_ptr_dtor( &dbh->query_stmt_zval );/OBJ_RELEASE(dbh->query_stmt_obj);dbh->query_stmt_obj=NULL;/' php_pdo_sqlsrv_int.h \
+        && phpize \
+        && ./configure --with-php-config="$(command -v php-config)" \
+        && make -j"$(nproc)" \
+        && make install \
+        && rm -rf /tmp/pdo_sqlsrv-5.12.0; \
+    else \
+        printf '\\n' | pecl install pdo_sqlsrv-5.12.0; \
+    fi \
+    && docker-php-ext-enable sqlsrv pdo_sqlsrv \
+    && apt-get purge -y --auto-remove gnupg unixodbc-dev "${phpize_deps[@]}" \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*"
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 #==============================================================================
 # Production Build
